jenkins/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-entrevista
spec:
  type: ClusterIP
  selector:
    app: jenkins-entrevista
  ports:
  - port: 80
    targetPort: 8080
